tests/files/lexer_tests/should_fail/082.cmdr
//Should not lex since missing semicolon
fn hi()